# SwipeBot

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
src/: config.py  main.py
src/bot/: __init__.py  ui_commands.py
src/bot/callbacks/: __init__.py  language.py  listings.py  menu.py
src/bot/handlers/: __init__.py  announcement.py  common.py  menu.py
src/bot/handlers/announcement/: __init__.py  create_announcement.py  get_announcement.py
src/bot/handlers/auth/: __init__.py  login.py  registration.py  reset_password.py
src/bot/keyboards/: __init__.py
src/bot/keyboards/inline/: __init__.py  announcement.py  language.py  login.py  main_menu.py  navigation.py  profile.py  start.py
src/bot/keyboards/reply/: __init__.py  announcement.py  get_contact.py  login.py  navigation.py
src/bot/middlewares/: __init__.py  i18n.py  logging.py
src/bot/states/: __init__.py  announcement.py  auth.py  listings.py  profile.py
src/bot/utils/: __init__.py  api.py  images.py  ui.py
src/database/: __init__.py  models.py  redis.py
src/infrastructure/: __init__.py
src/infrastructure/api/: __init__.py  base.py  client.py
src/infrastructure/api/resources/: __init__.py  announcement.py  auth.py  users.py
src/locales/ru/LC_MESSAGES/: messages.po
