[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
aiogram = "^3.24.0"
pydantic-settings = "^2.12.0"
motor = "^3.7.1"
beanie = "^2.0.1"
redis = "^7.1.0"
aiohttp = "^3.13.3"
babel = "^2.17.0"
httpx = "^0.28.1"


[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
